k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transitpulse-ingress
  namespace: bus-tracking
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: commuter-service
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/commuter
            pathType: Prefix
            backend:
              service:
                name: commuter-service
                port:
                  number: 8083
          - path: /api/buses
            pathType: Prefix
            backend:
              service:
                name: bus-service
                port:
                  number: 8081
          - path: /api/routes
            pathType: Prefix
            backend:
              service:
                name: bus-service
                port:
                  number: 8081
          - path: /api/occupancy
            pathType: Prefix
            backend:
              service:
                name: occupancy-service
                port:
                  number: 8082
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: commuter-service
                port:
                  number: 8083
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
